# Avoidant

./: .gitignore  README.md
Core/: CMakeLists.txt
Core/Code/: Engine.cpp  Engine.h
Core/Code/Math/: Math.cpp  Math.h  Vector2.cpp  Vector2.h
Core/Code/UI/: Button.cpp  Button.h
Core/Code/Utilities/: Application.cpp  Application.h  Macros.h  SpriteLoader.cpp  SpriteLoader.h
Core/Code/Window/: Window.cpp  Window.h
Game/: CMakeLists.txt
Game/Code/: DebugDraw.cpp  DebugDraw.h  Game.cpp  Game.h  Settings.h  main.cpp
Game/Code/Bullets/: Bullet.cpp  Bullet.h  BulletManager.cpp  BulletManager.h  BulletUserData.h
Game/Code/Data/: WindowSettings.h
Game/Code/Map/: Map.cpp  Map.h  MapSettings.h  Tile.cpp  Tile.h  TileData.h
Game/Code/Player/: HeartsManager.cpp  HeartsManager.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  PlayerData.h
Game/Code/UI/: Button.cpp  Button.h  GameOverPanel.cpp  GameOverPanel.h  MainMenu.cpp  MainMenu.h  StartButton.cpp  StartButton.h  UI.cpp  UI.h
Game/Include/SDL2/: cmake_uninstall.cmake  libSDL2-2.0.so.0.3000.5  sdl2-config  sdl2.pc
Game/Include/SDL2_Image/: libSDL2_image-2.0.so.0.800.2  showanim  showimage
Game/Include/SDL2_ttf/: glfont  libSDL2_ttf-2.0.so.0.2200.0  showfont
